[package]
name = "mtp_audioplayer"
version = "0.1.0"
authors = ["ksb <ksb@users.sourceforge.net>"]
edition = "2021"

[[bin]]
name = "openpipe_tool"
path = "src/bin/openpipe_tool/main.rs"


[dependencies]
hound = "3.1.0"
serde_json = "1.0"
serde= {version="*", features=["derive"]}
tracing="0.1"
tracing-subscriber="0.2"
tokio= {version="1", features=["rt-multi-thread", "net", "macros", "signal", "io-util", "sync", "time"]}
tokio-util="*"
log = "0.4"
futures="*"
alsa="0.6"
xml-rs="0.8"
clap="2.33"
nom="7.1"

warp="0.3"
chrono="0.4"

