[package]
name = "mtp_audioplayer"
version = "0.1.0"
authors = ["ksb <ksb@users.sourceforge.net>"]
edition = "2021"

[[bin]]
name = "openpipe_tool"
path = "src/bin/openpipe_tool/main.rs"

[dependencies]
hound = "3.1.0"
serde_json = "1.0"
serde= {version="*", features=["derive"]}
tracing="0.1"
tracing-subscriber="0.2"
tokio= {version="1", features=["rt-multi-thread", "net", "macros", "signal", "io-util", "sync", "time"]}
tokio-util="*"
log = "0.4"
futures="*"
cpal="0.13"
roxmltree="0.14"
clap="3.1"
nom="7.1"

warp="0.3"
chrono="0.4"

num_enum="0.5"
const-str="0.3"
paste="1.0"
simple_samplerate={git="https://github.com/fluffware/simple_samplerate.git"}
systemd = {version = "0.10", optional=true}

[dev-dependencies]
test-log = "0.2"
env_logger = "0.9"
[target.'cfg(windows)'.dependencies]
winapi="0.3"

